# personalbudget

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V10__txn_amount_color.sql  V11__txn_cc_payment.sql  V1__initial_schema.sql  V2__needs_review_and_bill_dates.sql  V3__backdate_schedule_seed.sql  V4__rename_default_accounts.sql  V5__category_budgeting.sql  V6__recurring_custom_cadence.sql  V7__txn_from_bill.sql  V8__txn_from_budget.sql  V9__txn_source_override.sql
src-tauri/src/: error.rs  forecast.rs  lib.rs  main.rs  merchant.rs  models.rs  pay_period.rs
src-tauri/src/commands/: accounts.rs  backup.rs  bills.rs  budgets.rs  categories.rs  dashboard.rs  export.rs  forecast_cmd.rs  goals.rs  imp.rs  legacy_import.rs  mod.rs  pay_periods.rs  transactions.rs
src-tauri/src/db/: mod.rs
src-tauri/src/parsers/: apple_card.rs  bofa_checking.rs  capital_one_savings.rs  legacy_app.rs  mod.rs
src/api/: index.ts  types.ts
src/components/: BudgetsPanel.tsx  QuickAdd.tsx  RecurringPanel.tsx  SplitModal.tsx  UndoHost.tsx  categoryEditors.tsx
src/lib/: categories.ts  collapse.ts  columns.tsx  formatting.ts  ghostOverrides.ts  ledgerView.ts  recurrence.ts  undo.ts
src/routes/: AccountBank.tsx  AccountCredit.tsx  AccountLedger.tsx  AccountSavings.tsx  Bills.tsx  Budgets.tsx  Dashboard.tsx  Forecast.tsx  Goals.tsx  Import.tsx  Ledger.tsx  (+2 more)
