[package]
name = "family-budget"
version = "1.1.0"
description = "Family Budget"
authors = ["Ben Niemann"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "family_budget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
sha1 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
